# 8-ball-pool

./: CMakeLists.txt  GetOutputs.h  Neat_main.h  README.md  ball.cpp  ball.h  goal.cpp  goal.h  grid.h  main.cpp  render.cpp  render.h  types_.h  vector2f.h
